Fix meta section CSS overflow issue on mobile version (#13)

--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,6 @@
 .container .mainSection .metaSection {
   flex: 20%;
 
-  height: 80vh;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
